// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findExpressions at end of an expression returns all expressions containing the position 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "5 + 2",
  },
  Expression {
    "position": Position {
      "end": 1,
      "start": 0,
    },
    "value": "5",
  },
]
`;

exports[`findExpressions at end of an expression returns all expressions containing the position 2`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "5 + 2",
  },
]
`;

exports[`findExpressions at end of an expression returns all expressions containing the position 3`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "5 + 2",
  },
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "2",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "5 + 2",
  },
  Expression {
    "position": Position {
      "end": 1,
      "start": 0,
    },
    "value": "5",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 2`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "5 + 2",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 3`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "5 + 2",
  },
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "2",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 4`] = `
Array [
  Expression {
    "position": Position {
      "end": 13,
      "start": 8,
    },
    "value": "5 + 2",
  },
  Expression {
    "position": Position {
      "end": 9,
      "start": 8,
    },
    "value": "5",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 5`] = `
Array [
  Expression {
    "position": Position {
      "end": 13,
      "start": 8,
    },
    "value": "5 + 2",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 6`] = `
Array [
  Expression {
    "position": Position {
      "end": 13,
      "start": 8,
    },
    "value": "5 + 2",
  },
  Expression {
    "position": Position {
      "end": 13,
      "start": 12,
    },
    "value": "2",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 7`] = `
Array [
  Expression {
    "position": Position {
      "end": 37,
      "start": 32,
    },
    "value": "2 + 2",
  },
  Expression {
    "position": Position {
      "end": 33,
      "start": 32,
    },
    "value": "2",
  },
]
`;

exports[`findExpressions at start of an expression returns all expressions containing the position at start of the expression 8`] = `
Array [
  Expression {
    "position": Position {
      "end": 16,
      "start": 11,
    },
    "value": "5 > 3",
  },
  Expression {
    "position": Position {
      "end": 12,
      "start": 11,
    },
    "value": "5",
  },
]
`;

exports[`findExpressions when selecting the expression fully returns only the selected expression 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 1,
      "start": 0,
    },
    "value": "5",
  },
]
`;

exports[`findExpressions when selecting the expression fully returns only the selected expression 2`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "5 + 2",
  },
]
`;

exports[`findExpressions when selecting the expression fully returns only the selected expression 3`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "2",
  },
]
`;

exports[`findExpressions when selecting the expression fully returns only the selected expression 4`] = `
Array [
  Expression {
    "position": Position {
      "end": 15,
      "start": 0,
    },
    "value": "() => { 5 + 2 }",
  },
]
`;
